# strukdat-manajemen-gudang

./: README.md
InventoryManagement/: CMakeLists.txt  dataBase.db  datahandler.cpp  datahandler.h  main.cpp  manufacturers.cpp  products.cpp  resource.qrc  seller.cpp  seller.h  warehouse_graph.cpp  warehouse_graph.h
InventoryManagement/GUI/: add_product_window.cpp  add_product_window.ui  edit_product_window.cpp  edit_product_window.ui  home_window.cpp  home_window.h  home_window.ui  inventory_widget.cpp  inventory_widget.h  inventory_widget.ui
